# lab04sukhov

./: CMakeLists.txt  array.h  figure.h  main.cpp  pentagon.h  point.h  rhombus.h  trapezoid.h
